devconf2024/04_deploy_applications/devconf2024-application-03/base/100-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: devconf2024-application-03
  namespace: devconf2024-application-03
  labels:
    app: devconf2024-application-03
    app.kubernetes.io/component: devconf2024-application-03
    app.kubernetes.io/instance: devconf2024-application-03
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: devconf2024-application-03
  template:
    metadata:
      labels:
        deployment: devconf2024-application-03
    spec:
      volumes:
        - name: configmap
          configMap:
            name: application-properties
            defaultMode: 420
      containers:
        - name: spring-app
          image: quay.io/ilago/spring-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: configmap
              mountPath: /tmp/config
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
