devconf2024/04_deploy_applications/devconf2024-application-03/base/200-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: devconf2024-application-03
  namespace: devconf2024-application-03
  labels:
    app: devconf2024-application-03
    app.kubernetes.io/component: devconf2024-application-03
    app.kubernetes.io/instance: devconf2024-application-03
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: devconf2024-application-03
