devconf2024/04_deploy_applications/devconf2024-application-03/base/300-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: devconf2024-application-03
  namespace: devconf2024-application-03
  labels:
    app: devconf2024-application-03
    app.kubernetes.io/component: devconf2024-application-03
    app.kubernetes.io/instance: devconf2024-application-03
spec:
  to:
    kind: Service
    name: devconf2024-application-03
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 8080-tcp
